WIP: Fix Z-index

--- a/client/src/components/UI/Modal/Modal.module.scss
+++ b/client/src/components/UI/Modal/Modal.module.scss
@@ -5,4 +5,5 @@
   left: 50%;
   // transition: all 0.3s ease-out;
   width: auto;
+  z-index: 3;
 }
