--- a/client/src/components/pages/Auth/Auth.module.scss
+++ b/client/src/components/pages/Auth/Auth.module.scss
@@ -9,6 +9,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 2%;
+  z-index: 4;
 }
 
 .AuthButtonGroup {
